add_executable(05.tcp_server 05.tcp_server.c)
target_link_libraries(05.tcp_server yolanda)
add_executable(05.tcp_client 05.tcp_client.c)
target_link_libraries(05.tcp_client yolanda)
add_executable(udp_client udp_client.c)
target_link_libraries(udp_client utils)
add_executable(udp_server udp_server.c)