add_executable(05.tcp_server 05.tcp_server.c)
target_link_libraries(05.tcp_server yolanda)
add_executable(05.tcp_client 05.tcp_client.c)
target_link_libraries(05.tcp_client yolanda)
add_executable(06.udp_client 06.udp_client.c)
target_link_libraries(06.udp_client utils)
add_executable(06.udp_server 06.udp_server.c)
add_executable(07.tcp_client 07.tcp_client.c)
target_link_libraries(07.tcp_client yolanda)
add_executable(07.tcp_server 07.tcp_server.c)
target_link_libraries(07.tcp_server yolanda)