add_executable(05.tcp_server 05.tcp_server.c)
target_link_libraries(05.tcp_server yolanda)
add_executable(05.tcp_client 05.tcp_client.c)
target_link_libraries(05.tcp_client yolanda)
add_executable(06.udp_client 06.udp_client.c)
target_link_libraries(06.udp_client utils)
add_executable(06.udp_server 06.udp_server.c)
add_executable(07.tcp_client 07.tcp_client.c)
target_link_libraries(07.tcp_client yolanda)
add_executable(07.tcp_server 07.tcp_server.c)
target_link_libraries(07.tcp_server yolanda)
add_executable(07.udp_client 07.udp_client.c)
target_link_libraries(07.udp_client yolanda)
add_executable(07.udp_server 07.udp_server.c)
target_link_libraries(07.udp_server yolanda)
add_executable(middle_server middle_server.c)
target_link_libraries(middle_server yolanda)
add_executable(middle_client middle_client.c)
target_link_libraries(middle_client yolanda)
add_executable(middle_server_v2 middle_server_v2.c)
target_link_libraries(middle_server_v2 yolanda ${LIBEVENT_LINK_LIBRARIES})
add_executable(middle_client_v2 middle_client_v2.c)
target_link_libraries(middle_client_v2 ${LIBEVENT_LINK_LIBRARIES})
